--- a/doro-scoresheet/doro-scoresheet.csproj
+++ b/doro-scoresheet/doro-scoresheet.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="cs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\doro\doro.csproj" />
+  </ItemGroup>
+
 </Project>
