--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
               run: dotnet workload restore
             
             - name: Publish .NET Core Project
-              run: dotnet publish doro-scoresheet/doro-scoresheet.csproj -c Release -o release --nologo
+              run: dotnet publish dorfromantik-scoresheet/doro-scoresheet.csproj -c Release -o release --nologo
 
-              # changes the base-tag in index.html from '/' to 'doro-scoresheet' to match GitHub Pages repository subdirectory
-            - name: Change base-tag in index.html from / to doro-scoresheet
-              run: sed -i 's/<base href="\/" \/>/<base href="\/doro-scoresheet\/" \/>/g' release/wwwroot/index.html
+              # changes the base-tag in index.html from '/' to 'dorfromantik-scoresheet' to match GitHub Pages repository subdirectory
+            - name: Change base-tag in index.html from / to dorfromantik-scoresheet
+              run: sed -i 's/<base href="\/" \/>/<base href="\/dorfromantik-scoresheet\/" \/>/g' release/wwwroot/index.html
 
             - name: copy index.html to 404.html
               run: cp release/wwwroot/index.html release/wwwroot/404.html
