--- a/doro/doro.csproj
+++ b/doro/doro.csproj
@@ -4,6 +4,31 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AppDesignerFolder>Localization</AppDesignerFolder>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Update="Localization\Doro.de-DE.Designer.cs">
+      <DependentUpon>Doro.de-DE.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Update="Localization\Doro.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Doro.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Localization\Doro.de-DE.resx">
+      <LastGenOutput>Doro.de-DE.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Localization\Doro.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Doro.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
